--- a/app/src/main/res/layout/layout_paytype0_item.xml
+++ b/app/src/main/res/layout/layout_paytype0_item.xml
@@ -8,10 +8,16 @@
 
     <RadioButton
         android:id="@+id/btn_radio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:button="@drawable/radio_icon"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp" />
+
+    <TextView
+        android:id="@+id/card_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:text="신한카드"/>
 
     <TextView
         android:id="@+id/card_name"
