--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -8,6 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/pid"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/rid"/>
     <TextView
         android:id="@+id/tv_room_title"
         android:layout_width="match_parent"
