--- a/app/src/main/res/layout/layout_paytype0_info.xml
+++ b/app/src/main/res/layout/layout_paytype0_info.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14dp"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/purple"
             android:text="@string/paytype0_info_title"/>
     </LinearLayout>
