--- a/app/src/main/res/layout/layout_reservation_discount.xml
+++ b/app/src/main/res/layout/layout_reservation_discount.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_marginTop="14dp">
+    android:layout_marginTop="14dp"
+    android:background="@color/white">
 
     <View
         android:layout_width="match_parent"
@@ -37,6 +38,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="14dp"
+        android:visibility="gone"
         android:gravity="center">
 
         <TextView
@@ -48,7 +50,7 @@
             android:textColor="@color/privateview"
             android:textSize="14dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/private_discount"
             android:layout_width="match_parent"
             android:layout_height="35dp"
@@ -60,8 +62,7 @@
             android:singleLine="true"
             android:background="@drawable/style_edittext_private_border"
             android:textColor="@color/privateview"
-            android:textSize="14dp"
-            tools:text="김나우"/>
+            android:textSize="14dp"/>
     </LinearLayout>
 
     <LinearLayout
