--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,8 @@
     <color name="blue_yoil">#135eb4</color>
     <color name="edit_back">#f6f6f6</color>
     <color name="private_discount">#1aBF2F68</color>
+    <color name="full_item_bg">#444444</color>
+    <color name="white7">#b3ffffff</color>
 
     <!--등급-->
     <color name="s1">#5c3599</color>
