--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -23,7 +23,7 @@
             <RelativeLayout
                 android:id="@+id/title_back"
                 android:layout_width="45dp"
-                android:layout_height="match_parent"
+                android:layout_height="55dp"
                 android:gravity="center_vertical">
 
                 <ImageView
@@ -36,7 +36,7 @@
             <TextView
                 android:id="@+id/title_text"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="55dp"
                 android:layout_toRightOf="@id/title_back"
                 android:layout_toLeftOf="@id/re_search"
                 android:singleLine="true"
@@ -49,6 +49,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_below="@+id/title_text"
                 android:background="@color/bg_background" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
