--- a/app/src/main/res/layout/layout_detail_review_item.xml
+++ b/app/src/main/res/layout/layout_detail_review_item.xml
@@ -9,27 +9,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/star1"
             android:layout_gravity="center_vertical"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:paddingRight="1dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:background="@drawable/ico_starpoint_press"/>
         <TextView
             android:id="@+id/review_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="2dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/purple"
-            android:textSize="11dp"
+            android:textSize="14dp"
             android:text=""
             tools:text="4.5"/>
         <TextView
@@ -40,7 +40,7 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/graytxt"
-            android:textSize="11dp"
+            android:textSize="14dp"
             android:text=""/>
     </LinearLayout>
 
@@ -48,20 +48,20 @@
         android:id="@+id/review_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="3dp"
         android:textColor="@color/termtext"
-        android:textSize="13dp"
+        android:textSize="14dp"
         android:text=""/>
 
     <TextView
         android:id="@+id/review_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:textColor="#aaaaaa"
         android:textSize="11dp"
@@ -72,21 +72,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
         android:visibility="gone">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@color/redtext">
-        </LinearLayout>
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:background="@color/hotel_color">
+
+            <TextView
+                android:id="@+id/tv_hotel_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_alignParentLeft="true"
+                android:ellipsize="end"
+                android:textSize="13dp"
+                android:layout_marginLeft="22dp"
+                android:textColor="#775032"
+                tools:text="xxxxxxxx" />
+
+            <TextView
+                android:id="@+id/tv_hotel_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:textSize="13dp"
+                android:ellipsize="end"
+                android:textColor="@color/graytxt"
+                android:layout_toRightOf="@+id/tv_hotel_name"
+                android:layout_marginLeft="7dp"
+                tools:text="xxxxxxxx" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="16dp">
 
             <ImageView
                 android:layout_width="16dp"
@@ -106,21 +132,14 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/review_hotel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginBottom="10dp"
-            android:textColor="#aaaaaa"
-            android:layout_marginTop="10dp"
-            android:textSize="11dp"
-            android:text=" "/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         android:background="@color/back_line">
     </LinearLayout>
 </LinearLayout>
