--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,8 @@
     <color name="private_discount">#1aBF2F68</color>
     <color name="full_item_bg">#444444</color>
     <color name="white7">#b3ffffff</color>
+    <color name="hotel_color">#22775032</color>
+
 
     <!--등급-->
     <color name="s1">#5c3599</color>
