--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sel_item"
     android:layout_width="290dp"
     android:layout_height="254dp"
     android:layout_marginRight="10dp"
@@ -17,6 +18,7 @@
             android:scaleType="fitXY" />
         
         <ImageView
+            android:id="@+id/btn_favorite"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:scaleType="fitXY"
