--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,15 @@
     <declare-styleable name="FlowLayout_Layout">
         <attr name="layout_breakLine" format="boolean"/>
     </declare-styleable>
+    <declare-styleable name="AutoScrollViewPager">
+        <attr name="slideInterval" format="integer" />
+        <attr name="slideDirection" format="enum">
+            <enum name="left" value="0" />
+            <enum name="right" value="1" />
+        </attr>
+        <attr name="stopWhenTouch" format="boolean" />
+        <attr name="cycle" format="boolean" />
+        <attr name="slideDuration" format="integer" />
+    </declare-styleable>
 </resources>
+
