--- a/app/src/main/res/layout/fragment_favorite_h.xml
+++ b/app/src/main/res/layout/fragment_favorite_h.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
+    android:id="@+id/main_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,8 +18,19 @@
             </com.hotelnow.utils.NonScrollListView>
     </android.support.v4.widget.NestedScrollView>
 
-    <include layout="@layout/layout_favorite_empty"
+    <include
+        android:id="@+id/empty_view"
+        layout="@layout/layout_favorite_empty"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="131dp"/>
+        android:layout_height="160dp"
+        android:layout_marginTop="131dp"
+        android:visibility="gone"/>
+
+    <include
+        android:id="@+id/login_view"
+        layout="@layout/layout_favorite_login"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_marginTop="131dp"
+        android:visibility="gone"/>
 </RelativeLayout>
