--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -81,6 +81,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:background="@color/white"
             android:textColor="@color/blacktxt"
             tools:text="L7 홍대 바이 롯데" />
@@ -88,7 +90,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
+            android:gravity="left|center|bottom"
+            android:layout_marginTop="2dp"
             android:orientation="horizontal">
 
             <TextView
@@ -106,10 +109,36 @@
                 android:layout_height="wrap_content"
                 android:gravity="left|center_vertical"
                 android:layout_marginLeft="2dp"
+                android:layout_marginTop="2dp"
                 android:textSize="12dp"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
-                tools:text="원 ~" />
+                android:text="원 ~" />
+
+            <LinearLayout
+                android:id="@+id/hotel_info3"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="right|center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/soon_discount"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/tag_discount"
+                    android:layout_marginLeft="4dp"
+                    android:scaleType="fitXY"/>
+
+                <ImageView
+                    android:id="@+id/soon_point"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/tag_doublepoint"
+                    android:scaleType="fitXY"
+                    android:layout_marginLeft="4dp"
+                    android:layout_toRightOf="@id/soon_discount" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
