--- a/app/src/main/res/layout/layout_favorite_login.xml
+++ b/app/src/main/res/layout/layout_favorite_login.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/empty_view"
+    android:id="@+id/login_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/btn_go_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/stay_go"
+    <Button
+        android:id="@+id/btn_go_login"
+        android:layout_width="155dp"
+        android:layout_height="42dp"
+        android:text="@string/login_title"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="@color/purple"
-        android:textSize="15dp"/>
+        android:textColor="@color/white"
+        android:background="@color/purple"
+        android:textSize="14dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="24dp"
-        android:layout_above="@+id/btn_go_list">
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/btn_go_login">
+
         <TextView
             android:id="@+id/tv_info1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="최근 1년간 저장된 상품이 없습니다"
+            android:text="로그인 후 이용이 가능한 메뉴입니다"
             android:gravity="center"
             android:textColor="@color/termtext"
             android:textSize="15dp"/>
@@ -37,7 +39,7 @@
             android:textColor="@color/graytxt"
             android:layout_marginTop="5dp"
             android:padding="1dp"
-            android:text="호텔나우가 추천하는 숙소를 보러 가시겠어요?"
+            android:text="관심 상품을 저장하고 편리하게 이용해보세요"
             android:textSize="14dp"
             android:gravity="center"/>
     </LinearLayout>
