--- a/app/src/main/res/layout/layout_hotel_banner.xml
+++ b/app/src/main/res/layout/layout_hotel_banner.xml
@@ -2,17 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="206dp"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
     <com.hotelnow.utils.ViewPagerCustom
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="130dp"
         android:scaleType="fitXY"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"/>
+        android:layout_marginTop="25dp"/>
 
 </LinearLayout>
