--- a/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_hotel_hotdeal_item.xml
@@ -79,6 +79,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:background="@color/white"
             android:textColor="@color/blacktxt"
             tools:text="L7 홍대 바이 롯데" />
