--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -1,4 +1,6 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<data>
 		<variable
@@ -6,19 +8,70 @@
 			type="com.hotelnow.fragment.reservation.ReservationFragment" />
 	</data>
 
-<LinearLayout
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
-	<Button
-		android:id="@+id/bt_test"
+	<RelativeLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" />
+		android:layout_height="match_parent"
+		android:background="@color/white">
 
-	<android.support.v7.widget.RecyclerView
-		android:id = "@+id/recycler_view"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		android:clipToPadding = "false" />
-</LinearLayout>
+		<LinearLayout
+			android:id="@+id/title_bar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				android:singleLine="true"
+				android:maxLines="1"
+				android:textSize="16dp"
+				android:textColor="@color/purple"
+				android:gravity="center"
+				android:ellipsize="end"
+				android:text="예약 내역" />
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:background="@color/bg_background" />
+		</LinearLayout>
+
+		<android.support.design.widget.TabLayout
+			android:id="@+id/tab_layout"
+			android:layout_width="match_parent"
+			android:layout_height="36dp"
+			android:layout_below="@id/title_bar"
+			app:tabBackground="@drawable/tab_color_selector"
+			app:tabTextColor="@color/detail_more_color"
+			app:tabSelectedTextColor="@color/purple"
+			app:tabIndicatorColor="@android:color/transparent"
+			app:tabIndicatorHeight="0dp">
+		</android.support.design.widget.TabLayout>
+
+		<TextView
+			android:id="@+id/info"
+			android:layout_width="match_parent"
+			android:layout_height="48dp"
+			android:textSize="13dp"
+			android:textColor="@color/termtext"
+			android:gravity="center_vertical|left"
+			android:paddingLeft="16dp"
+			android:layout_below="@+id/tab_layout"
+			android:text="@string/info_reservation"/>
+
+		<View
+			android:id="@+id/line"
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:layout_below="@+id/info"
+			android:background="@color/back_line"/>
+
+		<com.hotelnow.utils.NonSwipeableViewPager
+			android:id="@+id/view_pager"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:layout_below="@+id/line"
+			app:layout_behavior="com.hotelnow.utils.BottomNavigationBehavior"/>
+	</RelativeLayout>
 </layout>
