--- a/app/src/main/res/layout/activity_all_room.xml
+++ b/app/src/main/res/layout/activity_all_room.xml
@@ -18,8 +18,8 @@
             android:layout_centerVertical="true">
             <ImageView
                 android:id="@+id/icon_back"
-                android:layout_width="18dp"
-                android:layout_height="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:background="@drawable/ico_titbar_back"
                 android:layout_gravity="center"/>
         </LinearLayout>
@@ -34,6 +34,7 @@
             android:maxLines="1"
             android:textSize="16dp"
             android:text="객실 전체보기"
+            android:layout_marginLeft="10dp"
             android:textColor="@color/purple"
             android:layout_toLeftOf="@+id/bt_calendar"
             android:gravity="left|center"
