--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -18,8 +18,8 @@
             android:layout_centerVertical="true">
             <ImageView
                 android:id="@+id/icon_back"
-                android:layout_width="18dp"
-                android:layout_height="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:background="@drawable/ico_titbar_back"
                 android:layout_gravity="center"/>
         </LinearLayout>
@@ -33,6 +33,7 @@
             android:singleLine="true"
             android:maxLines="1"
             android:textSize="16dp"
+            android:layout_marginLeft="10dp"
             android:textColor="@color/purple"
             android:gravity="left|center"
             android:ellipsize="end" />
